--- a/firmware/MUSIA/stm32.props
+++ b/firmware/MUSIA/stm32.props
@@ -9,8 +9,8 @@
 <!-- In order to build this project manually (outside VisualGDB), please provide TOOLCHAIN_ROOT, BSP_ROOT, EFP_BASE and TESTFW_BASE variables via Environment or Make command line -->
 	<ItemDefinitionGroup>
 		<ClCompile>
-			<PreprocessorDefinitions>ARM_MATH_CM0;STM32F042C6;USE_USB_FS;flash_layout;STM32F042x6;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
-			<AdditionalIncludeDirectories>$(ProjectDir);$(BSP_ROOT)/STM32_USB_Device_Library/Core/Inc;$(BSP_ROOT)/STM32_USB_Device_Library/Class/CustomHID/Inc;$(BSP_ROOT)/STM32F0xxxx/STM32F0xx_HAL_Driver/Inc;$(BSP_ROOT)/STM32F0xxxx/STM32F0xx_HAL_Driver/Inc/Legacy;$(BSP_ROOT)/STM32F0xxxx/CMSIS_HAL/Device/ST/STM32F0xx/Include;$(BSP_ROOT)/STM32F0xxxx/CMSIS_HAL/Include;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+			<PreprocessorDefinitions>ARM_MATH_CM0;STM32F042C6;flash_layout;STM32F042x6;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
+			<AdditionalIncludeDirectories>$(ProjectDir);$(BSP_ROOT)/STM32F0xxxx/STM32F0xx_HAL_Driver/Inc;$(BSP_ROOT)/STM32F0xxxx/STM32F0xx_HAL_Driver/Inc/Legacy;$(BSP_ROOT)/STM32F0xxxx/CMSIS_HAL/Device/ST/STM32F0xx/Include;$(BSP_ROOT)/STM32F0xxxx/CMSIS_HAL/Include;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
 		</ClCompile>
 	</ItemDefinitionGroup>
 	<ItemDefinitionGroup>
